<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nombreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/descripcionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="16dp" />


    <EditText
        android:id="@+id/precioEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/precio"
        android:inputType="number"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/cantidadEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad"
        android:inputType="number"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/marcaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/marca"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="16dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/buttonCreateProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_producto"
        android:enabled="false"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="101dp" />

</LinearLayout>